--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <section class="galeria">
         <div class="foto-card">
-            <img src="https://imgur.com/gallery/vidas-Mp8pThs" alt="Momento 1">
+            <img src="Captura de tela 2026-02-16 194106.png" alt="Momento 1">
             <p>o casal mais lindo:</p>
         </div>
         <div class="foto-card">
@@ -198,3 +198,4 @@
 </body>
 
 </html>
+
