--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <p>Aquele dia especial</p>
         </div>
         <div class="foto-card">
-            <img src="https://imgur.com/gallery/sfasf-p5xOy9l" alt="Momento 3">
+            <img src="Captura de tela 2026-02-16 194116.png" alt="Momento 3">
             <p>Meu sorriso favorito</p>
         </div>
     </section>
@@ -198,4 +198,5 @@
 </body>
 
 </html>
+
 
