--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p>o casal mais lindo:</p>
         </div>
         <div class="foto-card">
-            <img src="https://imgur.com/gallery/dsadsaf-vAbduxc" alt="Momento 2">
+            <img src="Captura de tela 2026-02-16 194722.png" alt="Momento 2">
             <p>Aquele dia especial</p>
         </div>
         <div class="foto-card">
@@ -198,5 +198,6 @@
 </body>
 
 </html>
+
 
 
