--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <p>Aquele dia especial</p>
         </div>
         <div class="foto-card">
-            <img src="Captura de tela 2026-02-16 194116.png" alt="Momento 3">
+            <img src="Captura de tela 2026-02-16 194116.png" alt="Meu sorriso favorito">
             <p>Meu sorriso favorito</p>
         </div>
     </section>
@@ -251,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
